Fix rating text wrapping

--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -119,10 +119,36 @@
   width: 100%;
 }
 
+.concertPage .timeAndDateContainer {
+  grid-area: timetable;
+  display: flex;
+  flex-direction: row;
+}
+
+.concertPage .dateContainer {
+  width: fit-content;
+  margin: 15px;
+}
+
+.concertPage .dateTitle {
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+.concertPage .datePane {
+  margin-top: 5px;
+  font-size: x-large;
+  font-weight: bold;
+  border: 3px solid black;
+	border-radius: 5px;
+	background-color: white;
+	padding: 20px;
+	box-shadow: 0px 3px 3px grey;
+}
+
 .concertPage .programContainer {
   margin-top: 15px;
   margin-left: 15px;
-  grid-area: timetable;
 }
 
 .concertPage .programTitle {
@@ -142,6 +168,30 @@
   display: flex;
   justify-content: right;
   align-items: center;
+}
+
+.concertPage .priceContainer {
+  grid-area: tickets;
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.concertPage .priceBox {
+  width: fit-content;
+  height: fit-content;
+  font-weight: bold;
+  font-size: x-large;
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+  border: 3px solid black;
+	border-radius: 5px;
+	background-color: white;
+	padding: 20px;
+	box-shadow: 0px 3px 3px grey;
 }
 
 .concertPage .title {
