--- a/frontend/src/styles/Rating.module.css
+++ b/frontend/src/styles/Rating.module.css
@@ -5,18 +5,23 @@
   padding: 0 15px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .box {
-  height: 35px;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  align-items: center;
 }
 
 .text {
+  text-align: center;
+  width: fit-content;
   font-size: x-large;
   font-weight: bold;
-  float: left;
 }
 
 .stars {
-  float: right;
+  width: fit-content;
 }
